@@ -17,6 +17,7 @@
 
 package org.apache.mahout.math;
 
+import com.google.common.base.Splitter;
 import org.apache.mahout.common.RandomUtils;
 import org.junit.Test;
 
@@ -43,6 +44,22 @@ public final class TestRandomAccessSparseVector extends AbstractVectorTest<Rando
   @Override
   @Test
   public void testToString() {
-    super.testToString();
+    Vector w;
+    w = generateTestVector(20);
+    w.set(0, 1.1);
+    w.set(13, 100500.);
+    w.set(19, 3.141592);
+
+    for (String token : Splitter.on(',').split(w.toString().substring(1, w.toString().length() - 2))) {
+      String[] tokens = token.split(":");
+      assertEquals(Double.parseDouble(tokens[1]), w.get(Integer.parseInt(tokens[0])), 0.0);
+    }
+
+    w = generateTestVector(12);
+    w.set(10, 0.1);
+    assertEquals("{10:0.1}", w.toString());
+
+    w = generateTestVector(12);
+    assertEquals("{}", w.toString());
   }
 }
