@@ -62,6 +62,8 @@ Release 0.9 - unreleased
 
   MAHOUT-1261: TasteHadoopUtils.idToIndex can return an int that has size Integer.MAX_VALUE (Carl Clark, smarthi)
 
+  MAHOUT-1242: No key redistribution function for associative maps (Tharindu Rusira via smarthi)
+
 Release 0.8 - 2013-07-25
 
   MAHOUT-1272: Parallel SGD matrix factorizer for SVDrecommender (Peng Cheng via ssc)
